fix modal text-align

--- a/styles/style.css
+++ b/styles/style.css
@@ -199,6 +199,7 @@ canvas {
   height: 100%;
 }
 .modal-menu {
+  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
